Update DB to have RunningMang table Add page for running man episodes

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -24,7 +24,7 @@
             <td>{{ job.baselink }}</td>
         </tr>
         {% for epi in job.episodes %}
-        <tr class="collapse wm{{ job.id }}">
+        <tr class="collapse wm{{ job.id }}" style="background-color: #EDEDED; font-size: small">
             <td>Episode {{ epi.number }}</td>
             <td>{{ epi.status }}</td>
             <td>{{ epi.progress }}</td>
