--- a/webapp/templates/master.html
+++ b/webapp/templates/master.html
@@ -18,6 +18,8 @@
             AutoKDownload:
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('addseries') }}">AddSeries</a>
+            <a href="{{ url_for('addrm') }}">RunningMan</a>
+            <a href="{{ url_for('addrm') }}">AddRunningMan</a>
         </div>
         <hr>
         <!-- Optional JavaScript -->
