Add page to display running man episodes Fix typo in models.py

--- a/webapp/templates/master.html
+++ b/webapp/templates/master.html
@@ -18,7 +18,7 @@
             AutoKDownload:
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('addseries') }}">AddSeries</a>
-            <a href="{{ url_for('addrm') }}">RunningMan</a>
+            <a href="{{ url_for('rm') }}">RunningMan</a>
             <a href="{{ url_for('addrm') }}">AddRunningMan</a>
         </div>
         <hr>
